content too wide and horz scroll fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body {
 
 .fts {
     max-width: 300px;
+    width: 300px;
 }
 
 .current-day-highlight {
